get products with carts